--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </header>
 <body>
-   <!-- HTML-----------______----------__________------_______--------_______------ -->
+   <!-- HTML-----------______----------__________------_______--------_______-------->
     <h3></h3>
     <h1 id="title">LIGHTNING-ROUND TRIVIA GAME!</h1>
 
