--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <P>2. The best flavor of ice cream is?</p><BR>
         <input id="mint-chip" type="radio" name="question-two">Mint Chip<BR>
         <input class="wrong2" type="radio" name="question-two">French vanilla bean<BR>
-        <input class="wrong2" type="radio" name="question-two">Fuck<BR>
+        <input class="wrong2" type="radio" name="question-two">Pistachio<BR>
         <input class="wrong2" type="radio" name="question-two">Gumball<BR>
         
         
